# doctrack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  doctrack.skill
benchmarks/: dojo-parent-run1.json  dojo-parent-run2.json
crates/dt-index/: Cargo.toml
crates/dt-index/src/: index.rs  lib.rs  matching.rs  symbols.rs  vault.rs
crates/dt-lsp/: Cargo.toml  build.rs
crates/dt-lsp/src/: capabilities.rs  definition.rs  diagnostics.rs  hover.rs  main.rs  server.rs
crates/dt-mcp/: Cargo.toml  build.rs
crates/dt-mcp/src/: main.rs  tools.rs
crates/dt-watch/: Cargo.toml
crates/dt-watch/src/: lib.rs  watcher.rs
doctrack/: SKILL.md
scripts/: evaluate_vault.py
skill/: SKILL.md
skills/doctrack/: SKILL.md
