[workspace]
resolver = "2"
members = [
    "crates/dt-lsp",
    "crates/dt-index",
    "crates/dt-watch",
    "crates/dt-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/liamstar97/doctrack"

[workspace.dependencies]
# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Data structures
dashmap = "6"

# Frontmatter / YAML
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Fuzzy matching
nucleo-matcher = "0.3"

# MCP
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
schemars = "1.2"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
walkdir = "2"
globset = "0.4"
